log
Fri 09 Sep 2022 04:41:42 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
daeee85
Fri 09 Sep 2022 04:48:11 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
df89a49
Fri 09 Sep 2022 04:48:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:17: error: expected expression before ‘]’ token
   56 |   mapa->buckets[] = NULL;
      |                 ^
Compilation failed
fb12468
Fri 09 Sep 2022 04:48:48 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:17: error: expected expression before ‘]’ token
   56 |   mapa->buckets[][] = NULL;
      |                 ^
Compilation failed
5796dc9
Fri 09 Sep 2022 04:48:53 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7eca3f1
Fri 09 Sep 2022 04:49:57 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fce0ee2
Fri 09 Sep 2022 04:50:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
10bc0fa
Fri 09 Sep 2022 05:01:30 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
1e42998
Fri 09 Sep 2022 05:08:20 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:10: error: unused variable ‘i’ [-Werror=unused-variable]
   44 |   size_t i =hash(key,map->capacity);
      |          ^
hashmap.c:43:9: error: unused variable ‘newPair’ [-Werror=unused-variable]
   43 |   Pair *newPair = createPair(key,value);
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1cb4f9d
Fri 09 Sep 2022 05:13:30 PM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
52be467
Fri 09 Sep 2022 05:14:00 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
804f100
Fri 09 Sep 2022 05:14:09 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
67f4a55
Fri 09 Sep 2022 05:25:08 PM UTC: 
 hashmap.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:80:3: error: expected expression before ‘}’ token
   80 |   }
      |   ^
hashmap.c: In function ‘searchMap’:
hashmap.c:86:14: error: implicit declaration of function ‘has’; did you mean ‘hash’? [-Werror=implicit-function-declaration]
   86 |   size_t i = has(key,map->capacity);
      |              ^~~
      |              hash
hashmap.c: In function ‘firstMap’:
hashmap.c:106:16: error: comparison between pointer and integer [-Werror]
  106 |   if(map->size != NULL)
      |                ^~
hashmap.c:105:10: error: unused variable ‘i’ [-Werror=unused-variable]
  105 |   size_t i;
      |          ^
hashmap.c:108:1: error: control reaches end of non-void function [-Werror=return-type]
  108 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1043942
Fri 09 Sep 2022 05:25:33 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:86:14: error: implicit declaration of function ‘has’; did you mean ‘hash’? [-Werror=implicit-function-declaration]
   86 |   size_t i = has(key,map->capacity);
      |              ^~~
      |              hash
hashmap.c: In function ‘firstMap’:
hashmap.c:106:16: error: comparison between pointer and integer [-Werror]
  106 |   if(map->size != NULL)
      |                ^~
hashmap.c:105:10: error: unused variable ‘i’ [-Werror=unused-variable]
  105 |   size_t i;
      |          ^
hashmap.c:108:1: error: control reaches end of non-void function [-Werror=return-type]
  108 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ad019fc
Fri 09 Sep 2022 05:26:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:106:16: error: comparison between pointer and integer [-Werror]
  106 |   if(map->size != NULL)
      |                ^~
hashmap.c:105:10: error: unused variable ‘i’ [-Werror=unused-variable]
  105 |   size_t i;
      |          ^
hashmap.c:108:1: error: control reaches end of non-void function [-Werror=return-type]
  108 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
63ac58f
Fri 09 Sep 2022 05:26:24 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:107:16: error: comparison between pointer and integer [-Werror]
  107 |   if(map->size != NULL)
      |                ^~
hashmap.c:106:10: error: unused variable ‘i’ [-Werror=unused-variable]
  106 |   size_t i;
      |          ^
hashmap.c:109:1: error: control reaches end of non-void function [-Werror=return-type]
  109 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
37ac8ae
Fri 09 Sep 2022 05:26:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:107:16: error: comparison between pointer and integer [-Werror]
  107 |   if(map->size != NULL)
      |                ^~
hashmap.c:106:10: error: unused variable ‘i’ [-Werror=unused-variable]
  106 |   size_t i;
      |          ^
hashmap.c:109:1: error: control reaches end of non-void function [-Werror=return-type]
  109 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c578813
Fri 09 Sep 2022 05:27:48 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 30/70
68c43b5
Fri 09 Sep 2022 05:30:44 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:77:4: error: expected expression before ‘Pair’
   77 |   *Pair *Eliminado =searchMap(map,key);
      |    ^~~~
Compilation failed
7d669c0
Fri 09 Sep 2022 05:30:52 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
977a168
Fri 09 Sep 2022 05:32:02 PM UTC: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:77:4: error: expected expression before ‘Pair’
   77 |   *Pair *Eliminado =searchMap(map,key);
      |    ^~~~
hashmap.c:78:6: error: ‘Eliminado’ undeclared (first use in this function)
   78 |   if(Eliminado!=NULL){
      |      ^~~~~~~~~
hashmap.c:78:6: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
113368b
Fri 09 Sep 2022 05:33:02 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:77:4: error: expected expression before ‘Pair’
   77 |   *Pair Eliminado =searchMap(map,key);
      |    ^~~~
hashmap.c:78:6: error: ‘Eliminado’ undeclared (first use in this function)
   78 |   if(Eliminado!=NULL){
      |      ^~~~~~~~~
hashmap.c:78:6: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6ba47ec
Fri 09 Sep 2022 05:33:16 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
ddc3c1f
Sat 10 Sep 2022 01:30:21 PM UTC: 
 hashmap.c | 20 +++++++++++++++-----
 1 file changed, 15 insertions(+), 5 deletions(-)
 tests:  12|2
total_score: 50/70
3e5374c
Sat 10 Sep 2022 01:30:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
3165a61
Sat 10 Sep 2022 01:34:19 PM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:123:3: error: statement with no effect [-Werror=unused-value]
  123 |   for(i; i < map->capacity; i++)
      |   ^~~
cc1: all warnings being treated as errors
Compilation failed
5c09f91
Sat 10 Sep 2022 01:34:37 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 60/70
e838bd6
